# gitforge

./: README.md
.github/workflows/: ci.yml
gitforge/: Cargo.toml  package.json  tauri.conf.json
gitforge/.devcontainer/: devcontainer.json
gitforge/ant-core/: Cargo.toml  README.md
gitforge/ant-core/src/: lib.rs
gitforge/src-tauri/src/: main.rs
gitforge/src-tauri/src/agent/: mod.rs
gitforge/src-tauri/src/mcp/: server.rs
gitforge/src/components/: GitLayout.vue  TerminalPanel.vue  ThemePanel.vue
gitforge/src/style/: neumorphism.css  themes.css
