[package]
name = "gitforge"
version = "2.0.0"
edition = "2021"
description = "Forge your Git workflow — MCP Git IDE + AI Agent"

[[bin]]
name = "gitforge"
path = "src/bin/gitforge.rs"

[dependencies]
ant-core = { path = "ant-core" }
tauri = { version = "2.0", features = ["api-all", "webview"] }
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1.0", features = ["full"] }
async-tungstenite = "0.23"
rusqlite = { version = "0.31", features = ["bundled"] }
redb = "1.1"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
futures-util = "0.3"

[build-dependencies]
tauri-build = "2.0"
